# pygame-of-life

./: .gitignore  README.md  pyproject.toml
pygame_of_life/: engine.py  main.py  models.py
